@@ -4,6 +4,10 @@
 
   24 Sep 2008; Chris Gianelloni <wolf31o2@wolf31o2.org>
   cacti/netapp/scripts/ss_netapp.php:
+  Refactor a bit and clean up the query interface.
+
+  24 Sep 2008; Chris Gianelloni <wolf31o2@wolf31o2.org>
+  cacti/netapp/scripts/ss_netapp.php:
   Adding an additional argument before the host when doing queries allows us
   to select the function to run, or run them all, if nothing is specifiied.
 
